--- a/permohonan-adopsi.html
+++ b/permohonan-adopsi.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
             <ul class="req-user p-0">
-            <li class="my-1 p-3 border-bottom" style="font-size: 20px;">
+            <li class=" p-3 border-bottom" style="font-size: 20px;">
               <span class=""> <img class="mx-2 rounded-circle" width="50px" src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="" srcset=""> </span>
               User
             </li>
